--- a/app/src/main/res/layout/activity_top.xml
+++ b/app/src/main/res/layout/activity_top.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <com.harry.view.RefreshRecyclerView
         android:id="@+id/lv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="">
+        app:recyclerView="@layout/base_rv">
 
-    </TextView>
+    </com.harry.view.RefreshRecyclerView>
 </LinearLayout>
