--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,17 @@
 
     <dimen name="line_alert_size">16sp</dimen>
     <dimen name="line_indicator_text_size">12sp</dimen>
+
+    <dimen name="divider_width">16dp</dimen>
+
+    <dimen name="out_indicator_size">12sp</dimen>
+
+    <dimen name="title_indicator_size">17sp</dimen>
+    <dimen name="content_indicator_size">36sp</dimen>
+    <dimen name="unit_indicator_size">24sp</dimen>
+    <dimen name="alert_indicator_size">14sp</dimen>
+
+    <dimen name="center_circle_out">20dp</dimen>
+    <dimen name="center_circle_middle">12dp</dimen>
+    <dimen name="center_circle_inside">6dp</dimen>
 </resources>
