添加viewpager首尾页滑动反弹

--- a/app/src/main/res/values/af_attrs.xml
+++ b/app/src/main/res/values/af_attrs.xml
@@ -59,4 +59,8 @@
         <!--<attr name="selectedBgColor" format="reference|color"/>-->
     </declare-styleable>
 
+    <declare-styleable name="BounceViewPager">
+        <attr name="overscroll_translation" format="dimension"/>
+        <attr name="overscroll_animation_duration" format="integer"/>
+    </declare-styleable>
 </resources>
