--- a/app/src/main/res/layout/activity_download.xml
+++ b/app/src/main/res/layout/activity_download.xml
@@ -6,8 +6,22 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:id="@+id/end"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:scaleType="fitXY"
+        android:layout_marginLeft="300dp"
+        android:src="@mipmap/download"/>
+
+    <ImageView
         android:id="@+id/iv_main"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_marginTop="300dp"
+       />
+    <Button
+        android:id="@+id/start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scaleType="centerInside"/>
+        android:text="开始"/>
 </LinearLayout>
