--- a/app/src/main/res/layout/activity_progress.xml
+++ b/app/src/main/res/layout/activity_progress.xml
@@ -5,14 +5,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.harry.view.LineIndicator
-        android:id="@+id/li"
-        android:layout_width="match_parent"
+    <Button
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp"/>
+        android:text="indicator"
+        android:onClick="startIndicator"/>
 
-    <com.harry.progress.CircleIndicator
-        android:id="@+id/ci"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="progress"
+        android:onClick="startProgress"/>
 </LinearLayout>
