--- a/app/src/main/res/layout/activity_download.xml
+++ b/app/src/main/res/layout/activity_download.xml
@@ -24,4 +24,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="开始"/>
+    <Button
+        android:id="@+id/matrix"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="图片滤镜"/>
 </LinearLayout>
